...
    //MARK: Networking Method Call
    
    func searchForSpeciesWith(searchTerm: String, completion: @escaping () -> Void) {
        
        var urlComponents = URLComponents(url: baseURL, resolvingAgainstBaseURL: true)
        print("The link to the API Resource is: \(String(describing: urlComponents))")
        let searchTermQUeryItem = URLQueryItem(name: "search", value: searchTerm)
        
        urlComponents?.queryItems = [searchTermQUeryItem]
        
        guard let requestURL = urlComponents?.url else {
            print("request URL is nil")
            completion()
...
